compiler/test-data/parser/scheme/errors/missing_field_type.frel
module scheme.errors.missing_field_type

scheme User {
    name
}
